@@ -54,6 +54,7 @@ Integrated from 1.1.x
 
 1.1.5
 
+ - fixed temporary files deletion for WinXX agents (Eugene)
  - improved 'service_status[*]' allowed service name and display name (Eugnene)
  - added error reporting of PostgreSQL for frontend (Eugene)
  - fixed sms sender (Eugene)
